cabal-version:      2.4
name:               WriteYouAScheme
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Steven Lin
maintainer:         linjt267@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library

    build-depends:    base ^>=4.14.3.0,
                      parsec
    exposed-modules:  SkScheme.Parser,
                      SkScheme.Types,
                      SkScheme.Eval
    hs-source-dirs:   src
    default-language: Haskell2010

executable WriteYouAScheme
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      WriteYouAScheme
    hs-source-dirs:   app
    default-language: Haskell2010
